# whisper

./: .clinerules  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  live_dictation.py  migration-whisper.sh  pyproject.toml  pytest.ini  requirements.txt  setup_service.sh  test_keyword_function.py  test_live_dictation.py
.claude/: CLAUDE.md
.gemini/: GEMINI.md
dev_notes/changes/: 2026-02-01_10-00-00_finalize-agent-setup-and-tests.md  2026-02-01_12-00-00_bootstrap-integration-complete.md
doc/: overview.md
docs/: README.md  architecture.md  definition-of-done.md  implementation-reference.md  mandatory.md  templates.md  workflows.md
docs/system-prompts/: README.md  bootstrap.py  docscan.py  mandatory-reading.md  planning-doctor.py  planning-init.py  planning-running.py  planning-summary.py  reference-architecture.md
docs/system-prompts/checklists/: planning-preflight.md
docs/system-prompts/guidelines/: ai-provider-integration-patterns.md  mellona-integration-patterns.md  multi-project-error-handling.md
docs/system-prompts/guides/: agent-beads-detection.md  bead-ordering.md  beads-sticky-attribute.md  beads-usage.md  dolt-server-coordination.md
docs/system-prompts/patterns/: prompt-patterns.md
docs/system-prompts/principles/: agent-jurisdiction.md  definition-of-done.md  self-healing.md  (+1 more)
scripts/: runner.sh  setup_autostart.sh  setup_service.sh
src/: __init__.py
src/live_whisper/: __init__.py  live_dictation.py  transcribe_file.py
src/whisper/: live_dictation.py
tests/: __init__.py  test_keyword_replacement.py  test_live.py
(+45 files in other folders)
