[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "live-whisper"
version = "0.1.0"
description = "A real-time voice dictation tool using Whisper."
dependencies = [
    "openai-whisper",
    "scipy",
    "pyaudio",
    "pynput",
    "numpy",
]

[project.scripts]
live-dictation = "live_whisper.live_dictation:main"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"] # Standard flake8 rules + isort
ignore = []

[tool.ruff.format]
quote-style = "double"